--- a/juxingyunchuang/tcsl/products/mendian/index.html
+++ b/juxingyunchuang/tcsl/products/mendian/index.html
@@ -365,9 +365,9 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="field">
-                                <div class="field-key">省份 / 城市</div>
+                                <div class="field-key">城市</div>
                                 <div class="field-val">
-                                    <div id="CitySelect"><select class="province" name="province" id="province" data-first-title="选择省"></select><select class="city" name="city" id="city" data-first-title="选择市"><option value="">选择市</option></select></div>
+                                    <div class="field-val"><input type="text" name="city" id="city" placeholder="请填写城市"></div>
                                 </div>
                             </div>
                         </div>
@@ -433,13 +433,13 @@
                         <h4>关注我们</h4>
                     </div>
                     <div class="bd">
-                        <div class="qrc"><img src="../../media/social/ccbb4164cf514033a5619a54617c6853-qrc-weixin.png" alt="公众号">
+                        <div class="qrc"><img src="../../../assets/img/wechat_code.JPG" alt="公众号">
                             <p>公众号</p>
                         </div>
-                        <div class="qrc"><img src="../../media/social/7cc2d61e563f46fdab6df54cbde76783-qrc-course.png" alt="餐饮课堂">
+                        <div class="qrc"><img src="../../../assets/img/wechat_code.JPG" alt="餐饮课堂">
                             <p>餐饮课堂</p>
                         </div>
-                        <div class="qrc"><img src="../../media/social/d373fd0087224d73863897105220ab96-qrc-weibo.png" alt="微博">
+                        <div class="qrc"><img src="../../../assets/img/wechat_code.JPG" alt="微博">
                             <p>微博</p>
                         </div>
                     </div>
