--- a/juxingyunchuang/yinbao/landing/mobile/index.html
+++ b/juxingyunchuang/yinbao/landing/mobile/index.html
@@ -39,7 +39,7 @@
                     <a href="http://beta.pospal.cn/mRegister.html" class="swiper-slide-a swiper-slide-a_01">
                         <div class="text_1">你的会员&nbsp;无限可能</div>
                         <div class="text_2">十年专注收银系统&nbsp;&nbsp;致力挖掘会员潜能</div>
-                        <div class="btn_1 btn-active">免费试用</div>
+                        <!-- <div class="btn_1 btn-active">免费试用</div> -->
                     </a>
                 </div>
                 <div class="swiper-slide">
@@ -73,7 +73,7 @@
                 </ul>
             </div>
             <!-- 免费试用链接 -->
-            <a href="http://beta.pospal.cn/mRegister.html" class="btn-try btn-active">免费试用</a>
+            <!-- <a href="http://beta.pospal.cn/mRegister.html" class="btn-try btn-active">免费试用</a> -->
         </section>
         <section class="section_02">
             <h3 class="title">细分<span class="main-color-text">14大行业</span>&nbsp;好用得就像量身定制</h3>
@@ -100,8 +100,8 @@
                                 </ul>
                             </div>
                             <div class="product-btns">
-                                <a href="http://www.pospal.cn/pc_lsb.html" class="btn-product btn-active">了解详情</a>
-                                <a href="http://beta.pospal.cn/mRegister.html" class="btn-product btn-active">免费试用</a>
+                                <!-- <a href="http://www.pospal.cn/pc_lsb.html" class="btn-product btn-active">了解详情</a>
+                                <a href="http://beta.pospal.cn/mRegister.html" class="btn-product btn-active">免费试用</a> -->
                                 <div class="clear"></div>
                             </div>
                         </div>
@@ -130,8 +130,8 @@
                                 </ul>
                             </div>
                             <div class="product-btns">
-                                <a href="http://www.pospal.cn/landing/cvs/index.html" class="btn-product btn-active">了解详情</a>
-                                <a href="http://beta.pospal.cn/mRegister.html" class="btn-product btn-active">免费试用</a>
+                                <!-- <a href="http://www.pospal.cn/landing/cvs/index.html" class="btn-product btn-active">了解详情</a>
+                                <a href="http://beta.pospal.cn/mRegister.html" class="btn-product btn-active">免费试用</a> -->
                                 <div class="clear"></div>
                             </div>
                         </div>
@@ -160,8 +160,8 @@
                                 </ul>
                             </div>
                             <div class="product-btns">
-                                <a href="http://www.pospal.cn/maternal.html" class="btn-product btn-active">了解详情</a>
-                                <a href="http://beta.pospal.cn/mRegister.html" class="btn-product btn-active">免费试用</a>
+                                <!-- <a href="http://www.pospal.cn/maternal.html" class="btn-product btn-active">了解详情</a>
+                                <a href="http://beta.pospal.cn/mRegister.html" class="btn-product btn-active">免费试用</a> -->
                                 <div class="clear"></div>
                             </div>
                         </div>
@@ -190,8 +190,8 @@
                                 </ul>
                             </div>
                             <div class="product-btns">
-                                <a href="http://pospal.cn/landing/garment/index.html" class="btn-product btn-active">了解详情</a>
-                                <a href="http://beta.pospal.cn/mRegister.html" class="btn-product btn-active">免费试用</a>
+                                <!-- <a href="http://pospal.cn/landing/garment/index.html" class="btn-product btn-active">了解详情</a>
+                                <a href="http://beta.pospal.cn/mRegister.html" class="btn-product btn-active">免费试用</a> -->
                                 <div class="clear"></div>
                             </div>
                         </div>
@@ -341,8 +341,8 @@
                 </li>
                 <div class="clear"></div>
             </ul>
-            <div class="tip">注册即可免费试用</div>
-            <a href="http://beta.pospal.cn/mRegister.html" class="btn-register btn-active">立即注册</a>
+            <div class="tip">联系我们即可免费试用</div>
+            <!-- <a href="http://beta.pospal.cn/mRegister.html" class="btn-register btn-active">立即注册</a> -->
         </section>
 
         <section class="section_07"></section>
