--- a/juxingyunchuang/LP_Page/LP_Page.html
+++ b/juxingyunchuang/LP_Page/LP_Page.html
@@ -499,7 +499,7 @@
                     <div class="footer-single-widget mb-50">
                         <h4>产品合作</h4>
                         <ul>
-                            <li><a href="#"><i class="ti-email"></i> 商务合作：juxindp@126.com</a></li>
+                            <!-- <li><a href="#"><i class="ti-email"></i> 商务合作：juxindp@126.com</a></li> -->
                             <li><a href="#"><i class="ti-email"></i> 加入我们：juxindp@126.com</a></li>
                             <li><a href="#"><i class="ti-email"></i> 产品合作：juxindp@126.com</a></li>
                         </ul>
