--- a/juxingyunchuang/index.html
+++ b/juxingyunchuang/index.html
@@ -77,7 +77,7 @@
                  
                   <li class="dropdown">
                     <a href="#"
-                      ><span>私域流量服务（数字化经营）</span
+                      ><span>数字化服务</span
                       ><i class="bi bi-chevron-down"></i
                     ></a>
                   </li>
@@ -715,9 +715,14 @@
 
                 <div class="row content">
                     <div class="col-lg-6">
-                        <p>
-                            聚鑫呗是-家行业领先的互联网软件公司，,公司核心产品聚星壹开电子发票系统于2020年11月正式上线，以电子发票电子化改革为切入口，税务大数据为驱动力，加速商家和中小企业实现电发票，税务筹划，财税咨询等数字化经济的转型升级，公司相继取得5项软件著作权，产品获得了客户的高度认可，2021年公司先后获得高新技术企业和科技型中小企业等荣誉称号
-                        </p>
+                      <p>江苏聚鑫呗网络科技有限公司，成立于2019年8月，公司聚焦数字化服务领域的发展，致力于帮助10万+商户和中小企业实现数字化经营，让客户享受到数字化经营带来的效率和便捷，公司有聚星云创和聚星电票2大平台业务，先后与天财商龙、收钱吧、银豹等行业巨头在数字化服务方面进行了深度的战略合作；
+                        我们坚定拥抱数字化转型的时代浪潮，以电子发票电子化改革为切入口，税务大数据为驱动力，加速商家和中小企业实现电子发票，税务筹划，财税咨询等数字化经济的转型升级，码上开票，发票助手扫码版等产品获得了客户的高度认可，2021年公司先后获得高新技术企业和科技型中小企业等荣誉称号。
+                         未来，聚鑫呗科技将继续聚焦电子发票领域和数字化经营升级，加大吸引行业优秀人才加盟，致力成为数字化解决方案的领跑者”。</p>
+                <div class="row content">
+                    <div class="col-lg-6">
+                        21
+                    </div>
+                </div>
                         <a href="#" class="btn-learn-more">了解更多</a>
                     </div>
                 
