--- a/juxingyunchuang/qiying/index.html
+++ b/juxingyunchuang/qiying/index.html
@@ -326,40 +326,9 @@
             </div>
         </div>
     </div>
-<!--留言板-->
-<div class="guanggao-dbbox">
-    <div class="nb-nodeboard-top">
-        <span class="fl">请您留言</span>
-        <span class="fr" id="nb-close"><img src="../assets/img/nodeMax.png" alt=""></span>
-        <span class="fr" id="nb-gb"><img src="../assets/img/nodeMax.png" alt=""></span>
-        <span class="fr" id="nb-show"><img src="../assets/img/nodeMin.png" alt=""></span>
-    </div>
-    <div class="nb-nodeboard-text">
-        <p class="nb-nodeboard-company">百万机遇，等您激发</p>
-        <p class="nb-nodeboard-link">立即咨询</p>
-    </div>
-    <form id="nb_nodeboard_form" autocomplete="off" class="nb-board-form" action="" method="post" >
-        <div class="nb-nodeboard-content">
-            <textarea id="nb-nodeboard-set-content-js" name="square"  placeholder="请在此输入留言内容，我们会尽快与您联系。(必填)"></textarea>
-            <p class="nb-nodeboard-tips" id="nb-nodeboard-tips-js"></p>
-        </div>
-
-        <div class="nb-nodeboard-inputbox" id="nb-nodeboard-name" >
-            <span class="nb-nodeboard-icon nodeName"></span>
-            <input id="nb_nodeboard_set_name" data-write="0" name="name" maxlength="10"  type="text"  placeholder="姓名">
-        </div>
-
-        <div class="nb-nodeboard-inputbox" id="nb_nodeboard_phone" >
-            <span class="nb-nodeboard-icon nodePhone"></span>
-            <input id="nb_nodeboard_set_phone" name="tel" maxlength="11" class="nb-nodeboard-param"  type="text"  placeholder="手机号(必填)">
-        </div>
-        <p class="nb-nodeboardphone-tips" id="nb-nodeboardphone-tips-js"></p>
-        <div id="nb_nodeboard_send" needverifycode="1" class="nb-nodeboard-send-btn">发 送</div>
-    </form>
-</div>
     <div class="bottomtip">
         <div class="f1">易用可靠的全能商城&nbsp;&nbsp;&nbsp;&nbsp;</div>
-        <div class="btn1" onclick="location.href='/?s=/Index/lianxi'">立即咨询</div>
+        <div class="btn1" onclick="location.href='tel:4000440515'">立即咨询</div>
     </div>
 
     <div class="bottombox">
@@ -390,5 +359,6 @@
         })
     </script>
 </body>
-<script src="./static/index/js/shangqiao.js"></script>
+<script src="../assets/js/jquery.min.js"></script>
+<script src="../assets/js/shangqiao.js"></script>
 </html>
