--- a/juxingyunchuang/index.html
+++ b/juxingyunchuang/index.html
@@ -76,7 +76,7 @@
                 
                  
                   <li class="dropdown">
-                    <a href="#"
+                    <a href="./qiying/index.html"
                       ><span>数字化服务</span
                       ><i class="bi bi-chevron-down"></i
                     ></a>
