--- a/juxingyunchuang/index.html
+++ b/juxingyunchuang/index.html
@@ -108,7 +108,7 @@
                     <br>
                     <div class="d-flex justify-content-center justify-content-lg-start">
                         <a href="#contact" class="btn-get-started scrollto">立即报名</a>
-                        <a href="#" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>观看视频</span></a>
+                        <a href="./assets/media/166.MP4" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>观看视频</span></a>
                     </div>
                 </div>
                 <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
