--- a/juxingyunchuang/qiying/index.html
+++ b/juxingyunchuang/qiying/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>启赢云商</title>
-    <meta name="keywords" content="启赢云商,微信公众号,微信公众号商城,小程序商城,小程序分销系统,小程序在线制作,小程序,微信小程序,小程序制作,微信小程序制作,小程序工具,微信小程序工具,小程序开发,微信小程序开发,小程序平台,微信小程序平台" />
-    <meta name="description" content="启赢云商-微信公众号微信小程序商城及分销解决方案，致力于为广大商家快速搭建自己的微信公众号微信小程序，围绕会员、营销、效率，助力商家轻松经营店铺。" />
+    <title>聚星云创-营销解决方案</title>
+    <!-- <meta name="keywords" content="启赢云商,微信公众号,微信公众号商城,小程序商城,小程序分销系统,小程序在线制作,小程序,微信小程序,小程序制作,微信小程序制作,小程序工具,微信小程序工具,小程序开发,微信小程序开发,小程序平台,微信小程序平台" />
+    <meta name="description" content="启赢云商-微信公众号微信小程序商城及分销解决方案，致力于为广大商家快速搭建自己的微信公众号微信小程序，围绕会员、营销、效率，助力商家轻松经营店铺。" /> -->
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="Renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -483,7 +483,7 @@
 
     <div class="contentbox3">
         <div class="content">
-            <div class="title">启赢云商 小程序+公众号电商解决方案</div>
+            <div class="title">聚星云创小程序+公众号电商解决方案</div>
             <div class="desc">提供完整的解决方案，助力精准高效获取用户</div>
             <div class="con1">
                 <div class="left" style="padding-top:30px">
@@ -574,7 +574,7 @@
     </div>
 
     <div class="bottomtip">
-        <div class="f1">启赢云商&nbsp;&nbsp;&nbsp;易用可靠的全能商城</div>
+        <div class="f1">聚星云创&nbsp;&nbsp;&nbsp;易用可靠的全能商城</div>
         <div class="btn1" onclick="location.href='tel:4000440515'">立即咨询</div>
     </div>
 
@@ -586,7 +586,7 @@
             <a href="/?s=/Index/help">帮助中心</a>
         </div> -->
         <div class="f2">
-            Copyright © 2021 南京启赢信息技术有限公司 All Rights Reserved&nbsp;&nbsp;&nbsp;<a href="http://beian.miit.gov.cn/" target="_blank" style="color:#6B798E">苏ICP备16025733号</a>
+            Copyright © 2021 江苏聚鑫呗网络科技有限公司 All Rights Reserved&nbsp;&nbsp;&nbsp;
         </div>
     </div>
 
