--- a/juxingyunchuang/qiying/index.html
+++ b/juxingyunchuang/qiying/index.html
@@ -313,7 +313,7 @@
                         <div class="t2">商品秒杀、商品评价快递、自提、同城配送<br>支持三级以下分销模式</div>
                         <div class="t3">
                             <div class="btn1 on" onclick="box2changebtn(this,'./static/index/img/pic/8.jpg')">一级分类</div>
-                            <div class="btn1" onclick="box2changebtn(this,'./static/index/img/pic/9.jpg')">二级分类</div>
+                            <div class="btn1" onclick="box2changebtn(this,'/static/index/img/pic/9.jpg')">二级分类</div>
                             <div class="btn1" onclick="box2changebtn(this,'./static/index/img/pic/10.jpg')">三级分类</div>
                             <div class="btn1" onclick="box2changebtn(this,'./static/index/img/pic/11.jpg')">商品列表</div>
                             <div class="btn1" onclick="box2changebtn(this,'./static/index/img/pic/12.jpg')">商品搜索</div>
