--- a/juxingyunchuang/qiying/index.html
+++ b/juxingyunchuang/qiying/index.html
@@ -30,12 +30,12 @@
 <body>
     <div class="toptab">
         <div class="content">
-            <a href="../index.html" class="logo"><img src="./static/index/img/logo-1.jpg" title="聚星云创"/>聚星云创</a>
+            <a href="../index.html" class="logo"><img src="./static/index/img/logo-1.jpg" title="聚星云创" />聚星云创</a>
             <div class="item">
                 <a href="../index.html" class="on">首页</a>
                 <a href="../index.html/#about">关于我们</a>
                 <a href="../index.html/#contact">联系我们</a>
-               
+
             </div>
             <div class="zixun" onclick="location.href='tel:4000440515'">免费咨询</div>
         </div>
@@ -313,7 +313,7 @@
                         <div class="t2">商品秒杀、商品评价快递、自提、同城配送<br>支持三级以下分销模式</div>
                         <div class="t3">
                             <div class="btn1 on" onclick="box2changebtn(this,'./static/index/img/pic/8.jpg')">一级分类</div>
-                            <div class="btn1" onclick="box2changebtn(this,'/static/index/img/pic/9.jpg')">二级分类</div>
+                            <div class="btn1" onclick="box2changebtn(this,'./static/index/img/pic/9.jpg')">二级分类</div>
                             <div class="btn1" onclick="box2changebtn(this,'./static/index/img/pic/10.jpg')">三级分类</div>
                             <div class="btn1" onclick="box2changebtn(this,'./static/index/img/pic/11.jpg')">商品列表</div>
                             <div class="btn1" onclick="box2changebtn(this,'./static/index/img/pic/12.jpg')">商品搜索</div>
@@ -585,9 +585,9 @@
             <a href="/?s=/Index/lianxi">联系我们</a>
             <a href="/?s=/Index/help">帮助中心</a>
         </div> -->
-        <div class="f2">
-            Copyright © 2021 江苏聚鑫呗网络科技有限公司 All Rights Reserved&nbsp;&nbsp;&nbsp;
-        </div>
+    <div class="f2">
+        Copyright © 2021 江苏聚鑫呗网络科技有限公司 All Rights Reserved&nbsp;&nbsp;&nbsp;
+    </div>
     </div>
 
 
