--- a/juxingyunchuang/yinbao/landing/mobile/shouyinxitong.html
+++ b/juxingyunchuang/yinbao/landing/mobile/shouyinxitong.html
@@ -19,7 +19,8 @@
                 <li class="application-item weshop-bg">
                     <a href="./index.html" class="application-link">
                         <div class="application-name">银豹</div>
-                        <div class="application-features">一站式拥有，满足门店需求</div>
+                        <div class="application-features">一站式解决
+                          方案</div>
                     </a>
                 </li>
                 <!-- <li class="application-item minapp-bg">
@@ -31,13 +32,13 @@
                 <li class="application-item crmapp-bg">
                     <a href="../../../tcsl/products/mendian/index.html" class="application-link">
                         <div class="application-name">天财商龙</div>
-                        <div class="application-features">高端餐饮管理系统连锁数字化整体方案</div>
+                        <div class="application-features">深度餐饮管理系统</div>
                     </a>
                 </li>
                 <li class="application-item myshop-bg">
                     <a href="../../../caimeme/www.caimomo.com.cn/mobile/index.html" class="application-link">
                         <div class="application-name">菜么么</div>
-                        <div class="application-features">云计算餐饮SAAS系统</div>
+                        <div class="application-features">餐饮SAAS系统</div>
                     </a>
                 </li>
             </ul>
