--- a/juxingyunchuang/yinbao/landing/mobile/shouyinxitong.html
+++ b/juxingyunchuang/yinbao/landing/mobile/shouyinxitong.html
@@ -19,8 +19,7 @@
                 <li class="application-item weshop-bg">
                     <a href="./index.html" class="application-link">
                         <div class="application-name">银豹</div>
-                        <div class="application-features">一站式解决
-                          方案</div>
+                        <div class="application-features">一站式解决方案</div>
                     </a>
                 </li>
                 <!-- <li class="application-item minapp-bg">
