--- a/juxingyunchuang/qiying/index.html
+++ b/juxingyunchuang/qiying/index.html
@@ -33,11 +33,9 @@
             <a href="../index.html" class="logo"><img src="./static/index/img/logo-1.jpg" title="聚星云创" />聚星云创</a>
             <div class="item">
                 <a href="../index.html" class="on">首页</a>
-                <a href="../index.html/#about">关于我们</a>
-                <a href="../index.html/#contact">联系我们</a>
 
             </div>
-            <div class="zixun" onclick="location.href='tel:4000440515'">免费咨询</div>
+            <div class="zixun" onclick="location.href='http://m.jsyqyf.cn/app/index.php?i=20&c=entry&eid=255'">免费咨询</div>
         </div>
 
     </div>
@@ -572,10 +570,17 @@
             </div>
         </div>
     </div>
-
+    <div class="float-button"  style="position: fixed; 
+    height: 50px;
+    width: 40px;
+    bottom: 50px;
+    right: 50px;
+    background: #b4d145;"> 
+        <a href="http://m.jsyqyf.cn/app/index.php?i=20&c=entry&eid=255">立即咨询</a>
+    </div>
     <div class="bottomtip">
         <div class="f1">聚星云创&nbsp;&nbsp;&nbsp;易用可靠的全能商城</div>
-        <div class="btn1" onclick="location.href='tel:4000440515'">立即咨询</div>
+        <div class="btn1" onclick="location.href='http://m.jsyqyf.cn/app/index.php?i=20&c=entry&eid=255'">立即咨询</div>
     </div>
 
     <!-- <div class="bottombox">
