--- a/juxingyunchuang/tcsl/products/mendian/index.html
+++ b/juxingyunchuang/tcsl/products/mendian/index.html
@@ -348,55 +348,7 @@
         </div>
     </div>
     <!--.section-client-->
-    <div class="section section-apply">
-        <div class="hd">
-            <h2>申请试用</h2>
-        </div>
-        <div class="bd">
-            <div class="container">
-                <div class="js-tips"></div>
-                <form id="FormTry" action="/form/try/" method="post"><input type="hidden" name="csrfmiddlewaretoken" value="hDojxXsuHrkmhpVNyN3fw5zBlwNT9LvdGeVaIEciIHvFVeOQxte2QDLn8jtUDcvQ">
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <div class="field">
-                                <div class="field-key">您是</div>
-                                <div class="field-val"><select id="type" name="type"><option value="">请选择</option><option value="餐饮商户">餐饮商户</option><option value="意向代理">意向代理</option></select></div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="field">
-                                <div class="field-key">城市</div>
-                                <div class="field-val">
-                                    <div class="field-val"><input type="text" name="city" id="city" placeholder="请填写城市"></div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="field">
-                                <div class="field-key">手机号</div>
-                                <div class="field-val"><input type="text" name="phone" id="phone" placeholder="请填写"></div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="field">
-                                <div class="field-key">门店数</div>
-                                <div class="field-val"><select name="count" id="count"><option value="">请选择</option><option value="1 家">1 家</option><option value="2-20 家">2-20 家</option><option value="21-50 家">21-50 家</option><option value="51-100 家">51-100 家</option><option value="101-500 家">101-500 家</option><option value="500 家以上">500 家以上</option></select></div>
-                            </div>
-                        </div>
-                        <div class="col-lg-12">
-                            <div class="field-max"><textarea name="content" id="content" rows="3" placeholder="写下您的详细问题和需求，届时会有专员和您一对一沟通"></textarea></div>
-                        </div>
-                        <!-- <div class="col-lg-2 col-6">
-                            <div class="field">
-                                <div class="field-key">验证码</div>
-                                <div class="field-val"><img src="/captcha/image/b7782d715755bbd6854d6fd797a22aebac0169a0/" alt="captcha" class="captcha" /><input type="hidden" name="captcha_0" value="b7782d715755bbd6854d6fd797a22aebac0169a0" required id="id_captcha_0">
-                                    <input type="text" name="captcha_1" required id="id_captcha_1" autocapitalize="off" autocomplete="off" autocorrect="off" spellcheck="false"></div>
-                            </div>
-                        </div> -->
-                    </div><button type="submit" class="field-btn">提交</button></form>
-            </div>
-        </div>
-    </div>
+  
     <!--.section-apply 申请试用-->
     <footer class="footer">
         <div class="container">
@@ -452,6 +404,14 @@
         </div>
     </footer>
     <!--.footer-->
+    <div class="float-button"  style="position: fixed; 
+    height: 50px;
+    width: 40px;
+    bottom: 50px;
+    right: 50px;
+    background: #b4d145;"> 
+        <a href="http://m.jsyqyf.cn/app/index.php?i=20&c=entry&eid=255">立即咨询</a>
+    </div>
     <div class="modal-login modal fade" id="ModalVideo" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
             <div class="modal-content">
