--- a/juxingyunchuang/yinbao/landing/mobile/index.html
+++ b/juxingyunchuang/yinbao/landing/mobile/index.html
@@ -348,7 +348,7 @@
         <section class="section_07"></section>
     </main>
     <footer>
-        <a href="tel:4000440515" class="link">
+        <a href="http://m.jsyqyf.cn/app/index.php?i=20&c=entry&eid=255" class="link">
             <span class="link-icon"></span> 点我详询
         </a>
     </footer>
