--- a/juxingyunchuang/qiying_m/index.html
+++ b/juxingyunchuang/qiying_m/index.html
@@ -326,6 +326,14 @@
             </div>
         </div>
     </div>
+    <div class="float-button"  style="position: fixed; 
+    height: 50px;
+    width: 40px;
+    bottom: 50px;
+    right: 50px;
+    background: #b4d145;"> 
+        <a href="http://m.jsyqyf.cn/app/index.php?i=20&c=entry&eid=255">立即咨询</a>
+    </div>
     <div class="bottomtip">
         <div class="f1">易用可靠的全能商城&nbsp;&nbsp;&nbsp;&nbsp;</div>
         <div class="btn1" onclick="location.href='tel:4000440515'">立即咨询</div>
