--- a/juxingyunchuang/index.html
+++ b/juxingyunchuang/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>聚星电票—全国招募合伙人</title>
+    <title>江苏聚鑫呗网络科技有限公司</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
