--- a/juxingyunchuang/DA_Page/DA_Page.html
+++ b/juxingyunchuang/DA_Page/DA_Page.html
@@ -727,14 +727,16 @@
         </div>
     </div>
      <!--留言板-->
-     <div class="float-button"  style="position: fixed; 
-     height: 50px;
-     width: 40px;
-     bottom: 50px;
-     right: 50px;
-     background: #b4d145;"> 
-         <a href="http://m.jsyqyf.cn/app/index.php?i=20&c=entry&eid=255">立即咨询</a>
-     </div>
+      <div class="float-button"  style="position: fixed; 
+        height: 50px;
+        width: 50px;
+        bottom: 50px;
+        border-radius: 50%;
+        right: 50px;
+        background: #fff;"
+        > 
+            <a href="http://m.jsyqyf.cn/app/index.php?i=20&c=entry&eid=255"><img src="../../../assets/img/wx.png" alt=""></a>
+        </div>
     <!--底部-->
     <div class="footerpage"></div>
     <!-- JavaScripts -->
