--- a/juxingyunchuang/LP_Page/LP_Page.html
+++ b/juxingyunchuang/LP_Page/LP_Page.html
@@ -529,14 +529,16 @@
         </div>
     </div>
      <!--留言板-->
-     <div class="float-button"  style="position: fixed; 
-     height: 50px;
-     width: 40px;
-     bottom: 50px;
-     right: 50px;
-     background: #b4d145;"> 
-         <a href="http://m.jsyqyf.cn/app/index.php?i=20&c=entry&eid=255">立即咨询</a>
-     </div>
+      <div class="float-button"  style="position: fixed; 
+        height: 50px;
+        width: 50px;
+        bottom: 50px;
+        border-radius: 50%;
+        right: 50px;
+        background: #fff;"
+        > 
+            <a href="http://m.jsyqyf.cn/app/index.php?i=20&c=entry&eid=255"><img src="../../../assets/img/wx.png" alt=""></a>
+        </div>
     <!-- JS here -->
     <script src="js/jquery-1.9.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
